fix left align issue

--- a/flash-message-toast.scss
+++ b/flash-message-toast.scss
@@ -18,6 +18,7 @@
     &.leftAlign .flashMessageWrapper {
         left: 5%;
         right: inherit;
+        width: 50%;
         @media (max-width: 992px) {
             width: 90%;
         }
@@ -37,7 +38,7 @@
         color: #fff;
         opacity: .95;
         position: fixed;
-        z-index: 999;
+        z-index: 9999;
         top: inherit;
         left: inherit;
         .flashMessage {
